fix landscape footer overlapping

--- a/src/css/scss/_base.scss
+++ b/src/css/scss/_base.scss
@@ -191,6 +191,7 @@ footer{
     box-sizing: border-box;
     padding-bottom: 2rem;
     margin-top:3rem;
+    padding-top: 4rem;
     display: flex;
     flex-direction: column;
     align-items: center;
